--- a/docker.env
+++ b/docker.env
@@ -1,34 +1,14 @@
-# Docker Environment Configuration
-# Use this file for Docker development
-
-# Database
-DATABASE_URL="postgresql://ielts_user:ielts_password@postgres:5432/ielts_mock_test"
-
-# JWT Secret (CHANGE IN PRODUCTION!)
-JWT_SECRET="your-super-secret-jwt-key-here-change-in-production"
-
-# Cloudinary Configuration
-CLOUDINARY_CLOUD_NAME="your-cloud-name"
-CLOUDINARY_API_KEY="your-api-key"
-CLOUDINARY_API_SECRET="your-api-secret"
-
-# AWS S3 (Alternative to Cloudinary)
-AWS_ACCESS_KEY_ID="your-access-key"
-AWS_SECRET_ACCESS_KEY="your-secret-key"
-AWS_REGION="us-east-1"
-AWS_S3_BUCKET="your-bucket-name"
-
-# Next.js
+DATABASE_URL="postgresql://neondb_owner:npg_s0i7MxjcIhCd@ep-late-dust-a17jlpvf-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT="587"
+SMTP_SECURE="false"
+SMTP_USER="devloperabuhuraira@gmail.com"
+SMTP_PASS="uwosiveywevwrfdl
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-nextauth-secret-change-in-production"
-
-# Application
-NODE_ENV="production"
-
-# Email Configuration (Resend)
-RESEND_API_KEY="re_********************************"
-EMAIL_FROM="IELTS Mock Test <noreply@yourdomain.com>"
+CLOUDINARY_CLOUD_NAME=dz0azrpke
+CLOUDINARY_API_KEY=461621934977911
+CLOUDINARY_API_SECRET=Yb_OCqvfW-CRwFUecDcT5qREsl0
+RESEND_API_KEY=re_ACPKBocu_JwYQ8M3FNAFGPVrupbHSFpZb
+NODE_ENV=development
+EMAIL_FROM=onboarding@resend.dev
 RESEND_BASE_URL="https://api.resend.com"
-
-# Redis (if using for caching)
-REDIS_URL="redis://redis:6379"
