--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mock:comprehensive": "tsx scripts/create-comprehensive-mock-test.ts",
     "mock:verify": "tsx scripts/verify-part-storage.ts",
     "remedial:seed": "tsx scripts/seed-remedial-tests.ts",
+    "remedial:seed:headings": "tsx scripts/seed-remedial-tests-with-headings.ts",
     "setup:complete": "tsx scripts/setup-complete-system.ts"
   },
   "dependencies": {
